[gd_scene load_steps=2 format=2]

[ext_resource path="res://lib/ext/meta_stream/ext_main.gd" type="Script" id=1]

[node name="vbox1" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -488.0
margin_bottom = -240.0
rect_min_size = Vector2( 472, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grid" type="GridContainer" parent="."]
margin_right = 480.0
margin_bottom = 52.0
columns = 2

[node name="lbl_liquid_entity" type="Label" parent="grid"]
margin_top = -1.0
margin_right = 96.0
margin_bottom = 23.0
rect_min_size = Vector2( 96, 24 )
text = "Liquid entity"
valign = 1

[node name="liquid_entity" type="HScrollBar" parent="grid"]
margin_left = 100.0
margin_right = 480.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
max_value = 1.0
step = 0.1
value = 0.2

[node name="lbl_outline" type="Label" parent="grid"]
margin_top = 27.0
margin_right = 96.0
margin_bottom = 51.0
rect_min_size = Vector2( 96, 24 )
text = "Liquid outline"
valign = 1

[node name="liquid_outline" type="HScrollBar" parent="grid"]
margin_left = 100.0
margin_top = 28.0
margin_right = 480.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
min_value = 1.0
max_value = 5.0
step = 0.5
value = 1.0

[node name="hbox1" type="HBoxContainer" parent="."]
margin_top = 56.0
margin_right = 480.0
margin_bottom = 304.0

[node name="emission_shape" type="TabContainer" parent="hbox1"]
margin_right = 136.0
margin_bottom = 248.0
size_flags_vertical = 3

[node name="Point" type="VBoxContainer" parent="hbox1/emission_shape"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_dummy" type="Label" parent="hbox1/emission_shape/Point"]
margin_right = 128.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )

[node name="Box" type="VBoxContainer" parent="hbox1/emission_shape"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -76.0

[node name="grid" type="GridContainer" parent="hbox1/emission_shape/Box"]
margin_right = 128.0
margin_bottom = 80.0
columns = 2

[node name="label_x" type="Label" parent="hbox1/emission_shape/Box/grid"]
margin_top = -1.0
margin_right = 32.0
margin_bottom = 23.0
rect_min_size = Vector2( 32, 24 )
text = "X"
align = 1
valign = 1

[node name="x" type="LineEdit" parent="hbox1/emission_shape/Box/grid"]
margin_left = 36.0
margin_right = 128.0
margin_bottom = 24.0
rect_min_size = Vector2( 64, 24 )
size_flags_horizontal = 3

[node name="label_y" type="Label" parent="hbox1/emission_shape/Box/grid"]
margin_top = 27.0
margin_right = 32.0
margin_bottom = 51.0
rect_min_size = Vector2( 32, 24 )
text = "Y"
align = 1
valign = 1

[node name="y" type="LineEdit" parent="hbox1/emission_shape/Box/grid"]
margin_left = 36.0
margin_top = 28.0
margin_right = 128.0
margin_bottom = 52.0
rect_min_size = Vector2( 64, 24 )

[node name="label_z" type="Label" parent="hbox1/emission_shape/Box/grid"]
margin_top = 55.0
margin_right = 32.0
margin_bottom = 79.0
rect_min_size = Vector2( 32, 24 )
text = "Z"
align = 1
valign = 1

[node name="z" type="LineEdit" parent="hbox1/emission_shape/Box/grid"]
margin_left = 36.0
margin_top = 56.0
margin_right = 128.0
margin_bottom = 80.0
rect_min_size = Vector2( 64, 24 )

[node name="label_dummy" type="Label" parent="hbox1/emission_shape/Box"]
margin_top = 84.0
margin_right = 128.0
margin_bottom = 116.0
rect_min_size = Vector2( 128, 32 )

[node name="VSeparator" type="VSeparator" parent="hbox1"]
margin_left = 140.0
margin_right = 172.0
margin_bottom = 248.0
rect_min_size = Vector2( 32, 0 )

[node name="grid" type="GridContainer" parent="hbox1"]
margin_left = 176.0
margin_right = 480.0
margin_bottom = 248.0
columns = 3

[node name="lbl_amount" type="Label" parent="hbox1/grid"]
margin_top = -1.0
margin_right = 104.0
margin_bottom = 23.0
rect_min_size = Vector2( 96, 24 )
text = "Amount"
valign = 1

[node name="amount" type="HScrollBar" parent="hbox1/grid"]
margin_left = 108.0
margin_right = 236.0
margin_bottom = 24.0
rect_min_size = Vector2( 128, 24 )
min_value = 16.0
max_value = 2048.0
step = 16.0
value = 128.0

[node name="txt_amount" type="LineEdit" parent="hbox1/grid"]
margin_left = 240.0
margin_right = 304.0
margin_bottom = 24.0
rect_min_size = Vector2( 64, 24 )
align = 1
editable = false

[node name="lbl_lifetime" type="Label" parent="hbox1/grid"]
margin_top = 27.0
margin_right = 104.0
margin_bottom = 51.0
rect_min_size = Vector2( 96, 24 )
text = "Lifetime"
valign = 1

[node name="lifetime" type="HScrollBar" parent="hbox1/grid"]
margin_left = 108.0
margin_top = 28.0
margin_right = 236.0
margin_bottom = 52.0
rect_min_size = Vector2( 128, 24 )
min_value = 1.0
max_value = 10.0
step = 1.0
value = 3.0

[node name="txt_lifetime" type="LineEdit" parent="hbox1/grid"]
margin_left = 240.0
margin_top = 28.0
margin_right = 304.0
margin_bottom = 52.0
rect_min_size = Vector2( 64, 24 )
align = 1
editable = false

[node name="lbl_explosiveness" type="Label" parent="hbox1/grid"]
margin_top = 55.0
margin_right = 104.0
margin_bottom = 79.0
rect_min_size = Vector2( 96, 24 )
text = "Explosiveness"
valign = 1

[node name="explosiveness" type="HScrollBar" parent="hbox1/grid"]
margin_left = 108.0
margin_top = 56.0
margin_right = 236.0
margin_bottom = 80.0
rect_min_size = Vector2( 128, 24 )
max_value = 1.0
step = 0.1

[node name="txt_explosiveness" type="LineEdit" parent="hbox1/grid"]
margin_left = 240.0
margin_top = 56.0
margin_right = 304.0
margin_bottom = 80.0
rect_min_size = Vector2( 64, 24 )
align = 1
editable = false

[node name="lbl_spread" type="Label" parent="hbox1/grid"]
margin_top = 83.0
margin_right = 104.0
margin_bottom = 107.0
rect_min_size = Vector2( 96, 24 )
text = "Spread"
valign = 1

[node name="spread" type="HScrollBar" parent="hbox1/grid"]
margin_left = 108.0
margin_top = 84.0
margin_right = 236.0
margin_bottom = 108.0
rect_min_size = Vector2( 128, 24 )
max_value = 30.0
step = 1.0

[node name="txt_spread" type="LineEdit" parent="hbox1/grid"]
margin_left = 240.0
margin_top = 84.0
margin_right = 304.0
margin_bottom = 108.0
rect_min_size = Vector2( 64, 24 )
align = 1
editable = false

[node name="lbl_initial_velocity" type="Label" parent="hbox1/grid"]
margin_top = 111.0
margin_right = 104.0
margin_bottom = 135.0
rect_min_size = Vector2( 96, 24 )
text = "Initial Velocity"
valign = 1

[node name="initial_velocity" type="HScrollBar" parent="hbox1/grid"]
margin_left = 108.0
margin_top = 112.0
margin_right = 236.0
margin_bottom = 136.0
rect_min_size = Vector2( 128, 24 )
max_value = 20.0
step = 1.0
value = 10.0

[node name="txt_initial_velocity" type="LineEdit" parent="hbox1/grid"]
margin_left = 240.0
margin_top = 112.0
margin_right = 304.0
margin_bottom = 136.0
rect_min_size = Vector2( 64, 24 )
align = 1
editable = false

[node name="lbl_initial_velocity_random" type="Label" parent="hbox1/grid"]
margin_top = 139.0
margin_right = 104.0
margin_bottom = 163.0
rect_min_size = Vector2( 96, 24 )
text = "Velocity random"
valign = 1

[node name="initial_velocity_random" type="HScrollBar" parent="hbox1/grid"]
margin_left = 108.0
margin_top = 140.0
margin_right = 236.0
margin_bottom = 164.0
rect_min_size = Vector2( 128, 24 )
max_value = 1.0
step = 0.05

[node name="txt_initial_velocity_random" type="LineEdit" parent="hbox1/grid"]
margin_left = 240.0
margin_top = 140.0
margin_right = 304.0
margin_bottom = 164.0
rect_min_size = Vector2( 64, 24 )
align = 1
editable = false

[node name="lbl_linear_accel" type="Label" parent="hbox1/grid"]
margin_top = 167.0
margin_right = 104.0
margin_bottom = 191.0
rect_min_size = Vector2( 96, 24 )
text = "Linear accel"
valign = 1

[node name="linear_accel" type="HScrollBar" parent="hbox1/grid"]
margin_left = 108.0
margin_top = 168.0
margin_right = 236.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 24 )
min_value = -10.0
max_value = 10.0
step = 1.0

[node name="txt_linear_accel" type="LineEdit" parent="hbox1/grid"]
margin_left = 240.0
margin_top = 168.0
margin_right = 304.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 24 )
align = 1
editable = false

[node name="lbl_scale" type="Label" parent="hbox1/grid"]
margin_top = 195.0
margin_right = 104.0
margin_bottom = 219.0
rect_min_size = Vector2( 96, 24 )
text = "Scale"
valign = 1

[node name="scale" type="HScrollBar" parent="hbox1/grid"]
margin_left = 108.0
margin_top = 196.0
margin_right = 236.0
margin_bottom = 220.0
rect_min_size = Vector2( 128, 24 )
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.0

[node name="txt_scale" type="LineEdit" parent="hbox1/grid"]
margin_left = 240.0
margin_top = 196.0
margin_right = 304.0
margin_bottom = 220.0
rect_min_size = Vector2( 64, 24 )
align = 1
editable = false

[node name="lbl_scale_random" type="Label" parent="hbox1/grid"]
margin_top = 223.0
margin_right = 104.0
margin_bottom = 247.0
rect_min_size = Vector2( 96, 24 )
text = "Scale Random"
valign = 1

[node name="scale_random" type="HScrollBar" parent="hbox1/grid"]
margin_left = 108.0
margin_top = 224.0
margin_right = 236.0
margin_bottom = 248.0
rect_min_size = Vector2( 128, 24 )
max_value = 1.0
step = 0.1
value = 0.5

[node name="txt_scale_random" type="LineEdit" parent="hbox1/grid"]
margin_left = 240.0
margin_top = 224.0
margin_right = 304.0
margin_bottom = 248.0
rect_min_size = Vector2( 64, 24 )
align = 1
editable = false

[node name="recalc_gravity" type="CheckBox" parent="."]
margin_top = 308.0
margin_right = 480.0
margin_bottom = 332.0
rect_min_size = Vector2( 0, 24 )
text = "Recalc Gravity"
